2022-10-08  Jay Berkenbilt  <ejb@ql.org>

        * Fix major performance bug with the openssl crypto provider when
        using OpenSSL 3. The legacy loader and rc4 algorithm was being
        loaded with every call to the crypto provider instead of once in
        the life of the program. Fixes #798.

        * performance_check: add --test option to limit which tests are
        run.

2022-10-06  Jay Berkenbilt  <ejb@ql.org>

        * Change minimum required C++ version from C++-14 to C++-17.

2022-10-01  Jay Berkenbilt  <ejb@ql.org>

        * 11.1.1: release

2022-09-27  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix: avoid having the AppImage discard the first argument
        when renamed to one of the embedded executables. Fixes #789.

        * Add AppImage-specific tests to CI. These test different
        invocation styles and loading of the proper shared library.

2022-09-26  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix: avoid using PDF Doc encoding for strings whose PDF Doc
        encoding representation starts with UTF-16 or UTF-8 markers. Fixes
        #778.

2022-09-27  Jay Berkenbilt  <ejb@ql.org>

        * Add tests to CI for char being unsigned by default.

2022-09-14  Jay Berkenbilt  <ejb@ql.org>

        * 11.1.0: release

        * Add notes to documentation clarifying that installing the dev
        component usually requires the lib component to also be installed.

        * Set CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE ON in cmake to
        (hopefully) solve the problem of older installed qpdf headers
        interfering with building qpdf from source. Fixes #763.

2022-09-12  Jay Berkenbilt  <ejb@ql.org>

        * Add some missing DLL exports that only affect the Windows build.

        * Remove compile-time test for LL_FMT. It's unlikely that any
        compiler new enough to build qpdf still doesn't support %lld.

2022-09-10  Jay Berkenbilt  <ejb@ql.org>

        * 11.0.0: release

2022-09-09  Jay Berkenbilt  <ejb@ql.org>
